--- a/index.html
+++ b/index.html
@@ -3,9 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/f76bf69e8f.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.cdnfonts.com/css/poppins" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <title>EsteySiteFinal</title>
 </head>
 <body>
+   <nav class="navbar">
+      <div class="container">
+         <h1 class="logo">Estey Website for 636</h1>
+         <ul>
+            <li><a href="#index.html">Home</a></li>
+            <li><a href="aboutMe.html">About Me</a></li>
+            <li><a href="documents.html">Documents</a></li>
+
+         </ul>
+      </div>
+   </nav>
+   <header class="header">
+      <div class="container">
+         <div>
+            <h1>Estey's LIS 636</h1>
+            <p>Academic Website for LIS 636</p>
+
+            <br>
+
+            <p>An online repository for artifacts of Julia Estey's work and academic career as an information professional</p>
+         </div>
+         <img src="images/books.svg" alt="logo for 636">
+      </div>
+   </header>
+   <section class="boxes">
+      <div class="container">
+         <div class="box">
+            <h2><i class="fa-solid fa-book"></i></h2>
+            <p>I have books here</p>
+         </div>
+         <div class="box">
+            <h2><i class="fa-solid fa-book"></i></h2>
+            <p>I have books here</p>
+         </div>
+         <div class="box">
+            <h2><i class="fa-solid fa-book"></i></h2>
+            <p>I have books here</p>
+         </div>
+      </div>
+   </section>
+
+   <footer class="footer">
+      <div class="container">
+         <h1>LIS 636 Site</h1>
+         <p>Copyright &copy; 2023</p>
+      </div>
+      <div class="social media">
+         <div class="socialMedia">            
+            <a href="#"><i class="fab fa-github fa-2x"></i></a>
+            <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
+            <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
+            <a href="#"><i class="fab fa-twitter fa-2x"></i></a>            
+        </div>
+      </div>
+   </footer>
+
    <h1>
 Estey's Academic Website
 
