--- a/aboutMe.html
+++ b/aboutMe.html
@@ -13,7 +13,7 @@
       <div class="container">
          <h1 class="logo">Estey Website for 636</h1>
          <ul>
-            <li><a href="#index.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="aboutMe.html">About Me</a></li>
             <li><a href="documents.html">Documents</a></li>
 
@@ -23,33 +23,27 @@
    <header class="header">
       <div class="container">
          <div>
-            <h1>Estey's LIS 636</h1>
-            <p>Academic Website for LIS 636</p>
+            <h1>About Me</h1>
 
-            <br>
+            <br></br>
 
-            <p>An online repository for artifacts of Julia Estey's work and academic career as an information professional</p>
+            <p1>Learn more about Julia Estey's work and academic career as an information professional</p1>
          </div>
          <img src="images/Wardiere.png" alt="logo for 636" width="200" height="200">
       </div>
    </header>
    <section class="boxes">
-      <div class="container">
          <div class="box">
-            <h2><i class="fa-solid fa-book"></i></h2>
-            <p>Section One</p>
-         </div>
-         <div class="box">
-            <h2><i class="fa-solid fa-book"></i></h2>
-            <p>Section Two</p>
-         </div>
-         <div class="box">
-            <h2><i class="fa-solid fa-book"></i></h2>
-            <p>Section Three</p>
-         </div>
-      </div>
+            <div class="row">
+               <div class="column">
+              <img src="images/AboutMePhoto.jpeg" alt="About Me Image" class="center">
+              <br></br>
+               <p>My name is Julia Estey and I am a passionate information sciences professional and scholar, with a background in public and academic libraries,emerging adult and adult programming, and access services. My goal is to develop engaging programs and access to information resources and technology. I enjoy helping others learn, grow, and achieve through the programs, resources, and research I can connect them with, whether that be in virtual, face-to-face, or blended environments.</p>
+               <style>
+                  p {text-align: center;}
+                  </style>
+          </div>
    </section>
-
    <footer class="footer">
       <div class="container">
          <h1>LIS 636 Site</h1>
@@ -65,6 +59,6 @@
       </div>
    </footer>
 
-   
+
 </body>
 </html>
