--- a/aboutMe.html
+++ b/aboutMe.html
@@ -38,7 +38,7 @@
                <div class="column">
               <img src="images/AboutMePhoto.jpeg" alt="About Me Image" class="center">
               <br></br>
-               <p>My name is Julia Estey and I am a passionate information sciences professional and scholar, with a background in public and academic libraries,emerging adult and adult programming, and access services. My goal is to develop engaging programs and access to information resources and technology. I enjoy helping others learn, grow, and achieve through the programs, resources, and research I can connect them with, whether that be in virtual, face-to-face, or blended environments.</p>
+               <p>My name is Julia Estey and I am a passionate information sciences professional and scholar, with a background in public libraries, teen and adult programming, and access services. My goal is to develop engaging programs and access to information resources and technology. I enjoy helping others learn, grow, and achieve through the programs, resources, and research I can connect them with, whether that be in virtual or face-to-face settings.</p>
                <style>
                   p {text-align: center;}
                   </style>
