--- a/documents2.html
+++ b/documents2.html
@@ -12,7 +12,6 @@
    <nav class="navbar">
       <div class="container">
          <h1 class="logo">Estey Website for 636</h1>
-
          <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="aboutMe.html">About Me</a></li>
@@ -24,27 +23,30 @@
    <header class="header">
       <div class="container">
          <div>
-            <h1>About Me</h1>
+            <h1>Estey's LIS 636</h1>
 
-            <br></br>
+            <br>
 
-            <p1>Learn more about Julia Estey's work and academic career as an information professional</p1>
+            <p>This page houses a collection of documents and work samples reflective of my experience as a information professional and scholar</p>
          </div>
          <img src="images/Wardiere.png" alt="logo for 636" width="200" height="200">
       </div>
    </header>
    <section class="boxes">
+      <div class="container">
          <div class="box">
-            <div class="row">
-               <div class="column">
-              <img src="images/AboutMePhoto.jpeg" alt="About Me Image" class="center">
-              <br></br>
-               <p>My name is Julia Estey and I am a passionate information sciences professional and scholar, with a background in public libraries, teen and adult programming, and access services. My goal is to develop engaging programs and access to information resources and technology. I enjoy helping others learn, grow, and achieve through the programs, resources, and research I can connect them with, whether that be in virtual or face-to-face settings. Through this website you will be able to discover and engage with library sciences by connecting with an information professional through interactive artifacts of their academic pursuits and vocational experiences.</p>
-               <style>
-                  p {text-align: center;}
-                  </style>
-          </div>
+            <h2><i class="fa-solid fa-book"></i> Writing Samples and Projects </h2>
+            <p>Paper from LIS 600 Link <li><a href="Files/LIS in Journals.pdf">LIS in Journals Literary Review</a></li> <img src="images/Professional Development Log.png"></p>
+            <p>Paper from LIS 636 Link <li><a href="Files/Evaluation 4.pdf">Evaluation of St. Paul Public Library Digital Presence</a></li> <img src="images/Professional Development Log.png"></p>
+            <p>Link to LibGuide 620 <li><a href="https://uncg-lis.libguides.com/c.php?g=1317115&p=9684990">LibGuide on Textile Craft Hobbies</a></li> <img src="images/Professional Development Log.png"></p>
+            <p>Link to LibGuide 610 <li><a href="https://uncg-lis.libguides.com/GNCAL/britlit?preview=52be318a4553c4361cb0e481789c92ec">LibGuide for British Literature</a></li> <img src="images/Professional Development Log.png"></p>
+            <p>Link to Game from LIS 631 
+                <br></br>
+                <iframe src="https://scratch.mit.edu/projects/860244255/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe></p>
+         </div>
+      </div>
    </section>
+
    <footer class="footer">
       <div class="container">
          <h1>LIS 636 Site</h1>
@@ -60,6 +62,6 @@
       </div>
    </footer>
 
-
+   
 </body>
 </html>
