--- a/aboutMe.html
+++ b/aboutMe.html
@@ -16,8 +16,8 @@
          <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="aboutMe.html">About Me</a></li>
-            <li><a href="documents.html">Documents</a></li>
-
+            <li><a href="documents.html">Professional Documents</a></li>
+            <li><a href="documents2.html">Academic Work Samples</a></li>
          </ul>
       </div>
    </nav>
@@ -52,10 +52,11 @@
       </div>
       <div class="social media">
          <div class="socialMedia">            
-            <a href="#"><i class="fab fa-github fa-2x"></i></a>
+            <a href="https://github.com/jhestey"><i class="fab fa-github fa-2x"></i></a>
             <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
             <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
-            <a href="#"><i class="fab fa-twitter fa-2x"></i></a>            
+            <a href="#"><i class="fab fa-twitter fa-2x"></i></a>   
+            <a href="https://www.linkedin.com/in/julia-estey-379266127"><i class="fab fa-linkedin fa-2x"></i></a>          
         </div>
       </div>
    </footer>
