--- a/documents.html
+++ b/documents.html
@@ -15,7 +15,8 @@
          <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="aboutMe.html">About Me</a></li>
-            <li><a href="documents.html">Documents</a></li>
+            <li><a href="documents.html">Professional Documents</a></li>
+            <li><a href="documents2.html">Academic Work Samples</a></li>
 
          </ul>
       </div>
@@ -27,7 +28,7 @@
 
             <br>
 
-            <p>This page houses a collection of documents and work samples reflective of my experience as a information professional and scholar</p>
+            <p>This page houses a collection of documents reflecting of my experience as a information professional.</p>
          </div>
          <img src="images/Wardiere.png" alt="logo for 636" width="200" height="200">
       </div>
@@ -36,25 +37,84 @@
       <div class="container">
          <div class="box">
             <h2><i class="fa-solid fa-book"></i> Resume and Contact</h2>
-            <p>Resume Link & Image 
-                <br></br>
-                <a href="Files/2023 Estey Resume.pdf">Resume <img src="Images/Resume.JPG" class="center"></a></p> 
-            <p>Link to LinkedIn <li><a href="https://www.linkedin.com/in/julia-estey-379266127"> LinkedIn Profile <img src="Images/LinkedIn Logo.JPG" class="center"></a></p>
+            <p>
+               Attached here is a copy of my resume. This resume catalogs a varied experiences in the fields of education and literature. Through these experiences a narrative is told regarding my professional life and passions. The themes I hope are evident through this resume and the experiences it reflects are passion for people, learning, service, and stories.
+               <br></br>
+                <object data="Files/2023 Estey Resume.pdf" type="application/pdf" width="100%" height="500px"></object>
+            </p> 
          </div>
          <div class="box">
-            <h2><i class="fa-solid fa-book"></i> Professional Development and Teams</h2>
-            <p>Professional Development Log Link & Image <li><a href="Professional Development.pdf">Documents</a></li> <img src="images/Professional Development Log.png"></p>
-            <p>Teams/Initiatives/Programs Log <li><a href="Teams/Initiatives/Programs.pdf">Documents</a></li> <img src="images/Teams/Initiatives/Programs.png"></p>
+            <h2><i class="fa-solid fa-book"></i> Professional Development</h2>
+            <p>This is a summary of some of the most relevant Professional Development experiences and trainings I have had the opportunity to participate in. Each of these experiences helped me grow as a professional and contributed to the knowledge and skills I bring to my work as an information professional daily.
+            <br></br>
+            <ul>
+               <li>-“Horizon Overview” John Peitzman, Spring 2023</li>
+               <li>-“Database Specialist Orientation”Madhuri Kowndinya, Spring 2023</li>
+               <li>-“Crisis Intervention Team” Spring 2023</li>
+               <li>-“Foundation Directory Training” Spring 2023</li>
+               <li>-“MeckTech Info Session” Emery Ortiz, Spring 2023</li>
+               <li>-“New Staff Summer Break Training” Spring 2023</li>
+               <li>-“2023 Adult Services Retreat” Spring 2023 </li>
+               <li>-“Active Shooter Training” Spring 2023</li>
+               <li>-“Canva Training” Ty White, Spring 2023</li>
+               <li>-“Library IQ Training” Summer 2023</li>
+               <li>-“Inter Library Loan Training” Summer 2023</li>
+               <li>-“Pride Parade Participation Training” Summer 2023</li>
+               <li>-“OneAccess Connector Training” Summer 2023</li>
+               <li>-“Program Portal Training” Summer 2023</li>
+               <li>-“Libby Training” Spring 2023</li>
+               <li>-“Horizon Q&A” John Peitzman, Summer 2023</li>
+               <li>-“Translation Tablet Training” Fall 2023</li>
+               <li>-“LinkedIn Learning Webinar” Fall 2023</li>
+               <li>-“Staff Day 2023” Fall 2023</li>
+               </ul>
+               </p>
          </div>
          <div class="box">
-            <h2><i class="fa-solid fa-book"></i> Writing Samples and Projects </h2>
-            <p>Paper from LIS 600 Link <li><a href="Files/LIS in Journals.pdf">LIS in Journals Literary Review</a></li> <img src="images/Professional Development Log.png"></p>
-            <p>Paper from LIS 636 Link <li><a href="Files/Evaluation 4.pdf">Evaluation of St. Paul Public Library Digital Presence</a></li> <img src="images/Professional Development Log.png"></p>
-            <p>Link to LibGuide 620 <li><a href="https://uncg-lis.libguides.com/c.php?g=1317115&p=9684990">LibGuide on Textile Craft Hobbies</a></li> <img src="images/Professional Development Log.png"></p>
-            <p>Link to LibGuide 610 <li><a href="https://uncg-lis.libguides.com/GNCAL/britlit?preview=52be318a4553c4361cb0e481789c92ec">LibGuide for British Literature</a></li> <img src="images/Professional Development Log.png"></p>
-            <p>Link to Game from LIS 631 
-                <br></br>
-                <iframe src="https://scratch.mit.edu/projects/860244255/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe></p>
+            <h2><i class="fa-solid fa-book"></i> Teams, Initiatives, and Programs </h2>
+            <p>This is a record of some of the Teams, Initiatives, and Programs I am most proud and excited to have work on in my time as an information professional. 
+              ,<br></br>
+               <ul>
+                  <li>-Floating Collections Specialist</li>
+                  <li>-Database Specialist</li>
+                  <li>-Access Services Branch Point Person</li>
+                  <li>-Volunteer Point Person</li>
+                  <li>-Translation Tablet Point Person</li>
+                  <li>-Culture Ambassador</li>
+                  <li>-Kit Keeper Liason</li>
+                  <li>-Queens Outreach Point Person</li>
+                  <li>-Adult Services Retreat Planning Team</li>
+                  <li>-Adult Services</li>
+                  <li>-Teen Services</li>
+                  <li>-Interview Panel Summer 2023</li>
+                  <li>-Pride Parade Participation</li>
+                  </ul>
+
+               <br></br>
+                 
+             <b> 2023 Programs </b>
+             <br></br>
+                  <ul>
+                     <li>Student Success Center (weekly)</li>
+                     <li>Paws to Read (weekly)</li>
+                     <li>Service Saturdays (Bi Monthly)</li>
+                     <li>Technology Tutor (1-2 times weekly)</li>
+               <br></br>
+               <b> 2019-2020 Programs </b>
+               <br></br>
+                  <ul>
+                     <li>Community Service Events</li>
+                     <li>Anime Club (Monthly)</li>
+                     <li>Poetry and Pancakes (Monthly/Bi Monthly)</li>
+                     <li>YA Book Club (Monthly)</li>
+                     <li>STEAM 101: Makerspace (Weekly)</li>
+                     <li>College and Career Connections</li>
+                     <li>CMS Parent Night Outreach</li>
+                     <li>Recreation Center Outreach</li>
+                     <li>Game Nights (VR, Board Games, Smash Bros/Switch)</li>
+                     <li>Homework Study Zone</li>
+                  </ul>
+            </p>
          </div>
       </div>
    </section>
@@ -66,10 +126,11 @@
       </div>
       <div class="social media">
          <div class="socialMedia">            
-            <a href="#"><i class="fab fa-github fa-2x"></i></a>
+            <a href="https://github.com/jhestey"><i class="fab fa-github fa-2x"></i></a>
             <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
             <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
-            <a href="#"><i class="fab fa-twitter fa-2x"></i></a>            
+            <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
+            <a href="https://www.linkedin.com/in/julia-estey-379266127"><i class="fab fa-linkedin fa-2x"></i></a>             
         </div>
       </div>
    </footer>
