--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
          <ul>
             <li><a href="#index.html">Home</a></li>
             <li><a href="aboutMe.html">About Me</a></li>
-            <li><a href="documents.html">Documents</a></li>
+            <li><a href="documents.html">Professional Documents</a></li>
+            <li><a href="documents2.html">Academic Work Samples</a></li>
 
          </ul>
       </div>
@@ -28,7 +29,7 @@
 
             <br>
 
-            <p>An online repository for artifacts of Julia Estey's work and academic career as an information professional</p>
+            <p>An online repository for artifacts of Julia Estey's work and academic career and experience as an information professional</p>
          </div>
          <img src="images/Wardiere.png" alt="logo for 636" width="200" height="200">
       </div>
@@ -57,10 +58,11 @@
       </div>
       <div class="social media">
          <div class="socialMedia">            
-            <a href="#"><i class="fab fa-github fa-2x"></i></a>
+            <a href="https://github.com/jhestey"><i class="fab fa-github fa-2x"></i></a>
             <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
             <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
-            <a href="#"><i class="fab fa-twitter fa-2x"></i></a>            
+            <a href="#"><i class="fab fa-twitter fa-2x"></i></a> 
+            <a href="https://www.linkedin.com/in/julia-estey-379266127"><i class="fab fa-linkedin fa-2x"></i></a>           
         </div>
       </div>
    </footer>
