--- a/documents.html
+++ b/documents.html
@@ -11,7 +11,7 @@
 <body>
    <nav class="navbar">
       <div class="container">
-         <h1 class="logo">Estey Website for 636</h1>
+         <h1><a href="index.html" class="logo">Estey Website for 636</a></h1>
          <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="aboutMe.html">About Me</a></li>
@@ -41,6 +41,8 @@
                Attached here is a copy of my resume. This resume catalogs a varied experiences in the fields of education and literature. Through these experiences a narrative is told regarding my professional life and passions. The themes I hope are evident through this resume and the experiences it reflects are passion for people, learning, service, and stories.
                <br></br>
                 <object data="Files/2023 Estey Resume.pdf" type="application/pdf" width="100%" height="500px"></object>
+               <br></br>
+               <a href="Files/2023 Estey Resume.pdf" target="_blank">LIS in Journals Literary Review</a>
             </p> 
          </div>
          <div class="box">
@@ -126,11 +128,11 @@
       </div>
       <div class="social media">
          <div class="socialMedia">            
-            <a href="https://github.com/jhestey"><i class="fab fa-github fa-2x"></i></a>
+            <a href="https://github.com/jhestey" target="_blank"><i class="fab fa-github fa-2x"></i></a>
             <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
             <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
             <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
-            <a href="https://www.linkedin.com/in/julia-estey-379266127"><i class="fab fa-linkedin fa-2x"></i></a>             
+            <a href="https://www.linkedin.com/in/julia-estey-379266127" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>             
         </div>
       </div>
    </footer>
