--- a/aboutMe.html
+++ b/aboutMe.html
@@ -11,7 +11,7 @@
 <body>
    <nav class="navbar">
       <div class="container">
-         <h1 class="logo">Estey Website for 636</h1>
+         <h1><a href="index.html" class="logo">Estey Website for 636</a></h1>
 
          <ul>
             <li><a href="index.html">Home</a></li>
@@ -35,14 +35,14 @@
    </header>
    <section class="boxes">
          <div class="box">
-            <div class="row">
-               <div class="column">
-              <img src="images/AboutMePhoto.jpeg" alt="About Me Image" class="center">
+            <br></br>  
+            <img src="images/AboutMePhoto.jpeg" alt="About Me Image" class="center">
               <br></br>
                <p>My name is Julia Estey and I am a passionate information sciences professional and scholar, with a background in public libraries, teen and adult programming, and access services. My goal is to develop engaging programs and access to information resources and technology. I enjoy helping others learn, grow, and achieve through the programs, resources, and research I can connect them with, whether that be in virtual or face-to-face settings. Through this website you will be able to discover and engage with library sciences by connecting with an information professional through interactive artifacts of their academic pursuits and vocational experiences.</p>
                <style>
                   p {text-align: center;}
                   </style>
+                   <br></br>
           </div>
    </section>
    <footer class="footer">
@@ -52,11 +52,11 @@
       </div>
       <div class="social media">
          <div class="socialMedia">            
-            <a href="https://github.com/jhestey"><i class="fab fa-github fa-2x"></i></a>
+            <a href="https://github.com/jhestey" target="_blank"><i class="fab fa-github fa-2x"></i></a>
             <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
             <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
             <a href="#"><i class="fab fa-twitter fa-2x"></i></a>   
-            <a href="https://www.linkedin.com/in/julia-estey-379266127"><i class="fab fa-linkedin fa-2x"></i></a>          
+            <a href="https://www.linkedin.com/in/julia-estey-379266127" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>          
         </div>
       </div>
    </footer>
