--- a/documents2.html
+++ b/documents2.html
@@ -11,7 +11,7 @@
 <body>
    <nav class="navbar">
       <div class="container">
-         <h1 class="logo">Estey Website for 636</h1>
+         <h1><a href="index.html" class="logo">Estey Website for 636</a></h1>
          <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="aboutMe.html">About Me</a></li>
@@ -37,18 +37,29 @@
       <div class="container">
          <div class="box">
             <h2><i class="fa-solid fa-book"></i> Writing Samples and Projects </h2>
-            <p>Paper from LIS 600 Link This is a copy of a Literature Review I completed during my Foundations course of my MLIS. In this paper I evaluate the trends and trajectories of a particular information sciences journal over the decades.
-               <li><a href="Files/LIS in Journals.pdf">LIS in Journals Literary Review</a></li></p>
-            <p>Paper from LIS 636 Link This is a copy of a Website Evaluation I did of the St. Paul Public Library as part of my Web Development for Information Professionals course during my MLIS. In this paper I evaluate the accessibility, effectiveness, and usability of a large urban public library system in the Midwest of the United States.
-               <li><a href="Files/Evaluation 4.pdf">Evaluation of St. Paul Public Library Digital Presence</a></li></p>
-            <p>Link to LibGuide 620 This is a link to a LibGuide for the textile hobbies of Embroidery and Cross Stitch during my Information and Resources course of my MLIS program. I created this LibGuide to function as a professional LibGuide from a reputable institution would on the topic of a hobby growing in popularity.
-               <li><a href="https://uncg-lis.libguides.com/c.php?g=1317115&p=9684990">LibGuide on Textile Craft Hobbies</a></li></p>
-            <p>Link to LibGuide 610 This is a Link to a LibGuide I collaborated with colleagues for a group project as part of my Collections course in my MLIS program. This LibGuide was designed to be a resource for a fictitious community college library, my section focused on British Literature.
-               <li><a href="https://uncg-lis.libguides.com/GNCAL/britlit?preview=52be318a4553c4361cb0e481789c92ec">LibGuide for British Literature</a></li></p>
-            <p>Link to Game from LIS 631 
-               This Video was made to accompany the above LibGuide and promote its use amongst the student body in a way that holds their attention and meets their information needs.
+            <p><li>This is a copy of a Literature Review I completed during my Foundations course of my MLIS. In this paper I evaluate the trends and trajectories of a particular information sciences journal over the decades.
+                  <br></br>
+                  <a href="Files/LIS in Journals.pdf" target="_blank">LIS in Journals Literary Review</a></li>
+                  <br></br>
+               <li>This is a copy of a Website Evaluation I did of the St. Paul Public Library as part of my Web Development for Information Professionals course during my MLIS. In this paper I evaluate the accessibility, effectiveness, and usability of a large urban public library system in the Midwest of the United States.
+                  <br></br>
+                  <a href="Files/Evaluation 4.pdf" target="_blank">Evaluation of St. Paul Public Library Digital Presence</a></li>
+                  <br></br>
+               <li>This is a link to a LibGuide for the textile hobbies of Embroidery and Cross Stitch during my Information and Resources course of my MLIS program. I created this LibGuide to function as a professional LibGuide from a reputable institution would on the topic of a hobby growing in popularity.
+                  <br></br>
+                  <a href="https://uncg-lis.libguides.com/c.php?g=1317115&p=9684990" target="_blank">LibGuide on Textile Craft Hobbies</a></li>
+                  <br></br>
+               <li>This is a Link to a LibGuide I collaborated with colleagues for a group project as part of my Collections course in my MLIS program. This LibGuide was designed to be a resource for a fictitious community college library, my section focused on British Literature.
+                  <br></br>
+                  <a href="https://uncg-lis.libguides.com/GNCAL/britlit" target="_blank">Academic Subject Area LibGuide</a></li>
+                  <br></br>
+               <li>This Video was made to accompany the above LibGuide and promote its use amongst the student body in a way that holds their attention and meets their information needs.
+                  <br></br>
+                  <iframe width="560" height="315" src="https://www.youtube.com/embed/MMPOGCSjkSA" title="" frameBorder="0"   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"  allowFullScreen><br>Powered by <a href="https://youtubeembedcode.com">how to embed a youtube video</a> and <a href="https://utaninkomst.se/">sms lån direkt utbetalning utan inkomst</a></iframe></li>
+                  <br></br>
+               <li>This mini game was designed to to help users engage with concepts related to information literacy. Designing this game was part of my Emerging Technologies course in my MLIS program.
                 <br></br>
-            <iframe src="https://scratch.mit.edu/projects/860244255/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe></p>
+            <iframe src="https://scratch.mit.edu/projects/860244255/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe></li>
          </div>
       </div>
    </section>
@@ -60,11 +71,11 @@
       </div>
       <div class="social media">
          <div class="socialMedia">            
-            <a href="https://github.com/jhestey"><i class="fab fa-github fa-2x"></i></a>
+            <a href="https://github.com/jhestey" target="_blank"><i class="fab fa-github fa-2x"></i></a>
             <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
             <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
             <a href="#"><i class="fab fa-twitter fa-2x"></i></a>  
-            <a href="https://www.linkedin.com/in/julia-estey-379266127"><i class="fab fa-linkedin fa-2x"></i></a>          
+            <a href="https://www.linkedin.com/in/julia-estey-379266127" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>          
         </div>
       </div>
    </footer>
