--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
    <nav class="navbar">
       <div class="container">
-         <h1 class="logo">Estey Website for 636</h1>
+         <h1><a href="index.html" class="logo">Estey Website for 636</a></h1>
          <ul>
             <li><a href="#index.html">Home</a></li>
             <li><a href="aboutMe.html">About Me</a></li>
@@ -32,23 +32,38 @@
             <p>An online repository for artifacts of Julia Estey's work and academic career and experience as an information professional</p>
          </div>
          <img src="images/Wardiere.png" alt="logo for 636" width="200" height="200">
+      
       </div>
    </header>
-   <section class="boxes">
-      <div class="container">
-         <div class="box">
-            <h2><i class="fa-solid fa-book"></i></h2>
-            <p>Section One</p>
-         </div>
-         <div class="box">
-            <h2><i class="fa-solid fa-book"></i></h2>
-            <p>Section Two</p>
-         </div>
-         <div class="box">
-            <h2><i class="fa-solid fa-book"></i></h2>
-            <p>Section Three</p>
-         </div>
-      </div>
+   
+
+<div class="row">
+   <div class="column">
+      <a href="aboutMe.html"><img src="Images/galleryabout.png" alt="About Me" onclick="myFunction(this);"></a>
+   </div>
+   <div class="column">
+      <a href="documents.html"><img src="Images/gallerypd.png" alt="Professional Documents" onclick="myFunction(this);">
+   </div>
+   <div class="column">
+      <a href="documents2.html"><img src="Images/galleryaws.png" alt="Academic Work Samples" onclick="myFunction(this);"></a>
+   </div> 
+   <div class="column">
+      <a href="contact.html" target="_blank"><img src="Images/gallerycontact.png" alt="Contact" onclick="myFunction(this);"></a>    
+   </div>
+ </div>
+ 
+
+ <div class="container">
+
+   <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
+ 
+
+   <img id="expandedImg" style="width:100%" alignment="center">
+ 
+
+   <div id="imgtext"></div>
+ </div>
+
    </section>
 
    <footer class="footer">
@@ -58,11 +73,11 @@
       </div>
       <div class="social media">
          <div class="socialMedia">            
-            <a href="https://github.com/jhestey"><i class="fab fa-github fa-2x"></i></a>
+            <a href="https://github.com/jhestey" target="_blank"><i class="fab fa-github fa-2x"></i></a>
             <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
             <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
             <a href="#"><i class="fab fa-twitter fa-2x"></i></a> 
-            <a href="https://www.linkedin.com/in/julia-estey-379266127"><i class="fab fa-linkedin fa-2x"></i></a>           
+            <a href="https://www.linkedin.com/in/julia-estey-379266127" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>           
         </div>
       </div>
    </footer>
