--- a/aboutMe.html
+++ b/aboutMe.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/f76bf69e8f.js" crossorigin="anonymous"></script>
     <link href="https://fonts.cdnfonts.com/css/poppins" rel="stylesheet">
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>EsteySiteFinal</title>
 </head>
 <body>
@@ -45,22 +45,20 @@
                    <br></br>
           </div>
    </section>
+
    <footer class="footer">
       <div class="container">
-         <h1>LIS 636 Site</h1>
+         <div class="logo">LIS 636 Site</div>
          <p>Copyright &copy; 2023</p>
-      </div>
-      <div class="social media">
-         <div class="socialMedia">            
+               <div class="socialMedia">                 
             <a href="https://github.com/jhestey" target="_blank"><i class="fab fa-github fa-2x"></i></a>
             <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
             <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
-            <a href="#"><i class="fab fa-twitter fa-2x"></i></a>   
-            <a href="https://www.linkedin.com/in/julia-estey-379266127" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>          
+            <a href="#"><i class="fab fa-twitter fa-2x"></i></a> 
+            <a href="https://www.linkedin.com/in/julia-estey-379266127" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>           
         </div>
       </div>
    </footer>
-
 
 </body>
 </html>
