--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/f76bf69e8f.js" crossorigin="anonymous"></script>
     <link href="https://fonts.cdnfonts.com/css/poppins" rel="stylesheet">
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>EsteySiteFinal</title>
 </head>
 <body>
@@ -26,7 +26,7 @@
          <div>
             <h1>Estey's LIS 636</h1>
             <p>Academic Website for LIS 636</p>
-
+  
             <br>
 
             <p>An online repository for artifacts of Julia Estey's work and academic career and experience as an information professional</p>
@@ -38,29 +38,21 @@
    
 
 <div class="row">
-   <div class="column">
+   
       <a href="aboutMe.html"><img src="Images/galleryabout.png" alt="About Me" onclick="myFunction(this);"></a>
-   </div>
-   <div class="column">
+   
       <a href="documents.html"><img src="Images/gallerypd.png" alt="Professional Documents" onclick="myFunction(this);">
-   </div>
-   <div class="column">
+ 
       <a href="documents2.html"><img src="Images/galleryaws.png" alt="Academic Work Samples" onclick="myFunction(this);"></a>
-   </div> 
-   <div class="column">
+   
       <a href="contact.html" target="_blank"><img src="Images/gallerycontact.png" alt="Contact" onclick="myFunction(this);"></a>    
-   </div>
+   
  </div>
  
 
  <div class="container">
-
    <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
- 
-
    <img id="expandedImg" style="width:100%" alignment="center">
- 
-
    <div id="imgtext"></div>
  </div>
 
@@ -68,11 +60,9 @@
 
    <footer class="footer">
       <div class="container">
-         <h1>LIS 636 Site</h1>
+         <div class="logo">LIS 636 Site</div>
          <p>Copyright &copy; 2023</p>
-      </div>
-      <div class="social media">
-         <div class="socialMedia">            
+               <div class="socialMedia">                 
             <a href="https://github.com/jhestey" target="_blank"><i class="fab fa-github fa-2x"></i></a>
             <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
             <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
